wi: Fixing the project and running the first steps